--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Edgar Muniz Berlinck</title>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+              google_ad_client: "ca-pub-1965846678573457",
+              enable_page_level_ads: true
+        });
+    </script>
   </head>
   <body>
     <noscript>
